refactor: Update workspace directory

--- a/ros2_ws/my_robot_controller/package.xml
+++ b/ros2_ws/my_robot_controller/package.xml
@@ -4,7 +4,7 @@
   <name>my_robot_controller</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="alan@todo.todo">alan</maintainer>
+  <maintainer email="alanyeung.dev@gmail.com">alan</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
